--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Proyecto2 524-C</title>
 </head>
 <body>
-    <h1>Proyecto2 524-C</h1>
+    <div id="container">
+        <h1>Proyecto2 524-C</h1>
+        <p>El siguiennte es un blog de tecnologia</p>
+    </div>
 </body>
 </html>
