Se completo el parrafo de descripcion

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="container">
         <h1>Proyecto2 524-C</h1>
         <p>El siguiennte es un blog de tecnologia</p>
+        <p>Los blogs son una forma de compartir información y tus ideas. Mucho mas que ir a una conferencia o salir en youtube. Excepto que seas un rockstar</p>
     </div>
 </body>
 </html>
