--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="header">
+            Hyperblog
+        </div>
         <h1>Proyecto2 524-C</h1>
         <p>El siguiennte es un blog de tecnologia</p>
         <p>Los blogs son una forma de compartir información y tus ideas. Mucho mas que ir a una conferencia o salir en youtube. Excepto que seas un rockstar</p>
