--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </div>
         <h1>Proyecto2 524-C</h1>
         <p>El siguiennte es un blog de tecnologia</p>
+        <p>Este blog es para tecnologia avanzada!</p>
         <p>Los blogs son una forma de compartir información y tus ideas. Mucho mas que ir a una conferencia o salir en youtube. Excepto que seas un rockstar</p>
     </div>
     <div id="footer">
