modificacion del contenedor

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <p>El siguiennte es un blog de tecnologia</p>
         <p>Este blog es para tecnologia avanzada!</p>
         <p>Los blogs son una forma de compartir información y tus ideas. Mucho mas que ir a una conferencia o salir en youtube. Excepto que seas un rockstar</p>
+        <div class="contenedor">
+            <h1>Contenedor</h1>
+
+        </div>
     </div>
     <div id="footer">
         Desarrollado por tecnologia avanzada Web 2025
